# c-vscode-template

./: CMakeLists.txt  README.md
src/: lib.c  lib.h  main.c
tests/: failing_test.c  failing_test.h  main.c  ok_test.c  ok_test.h
